--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,42 +1,25 @@
-#root {
-  max-width: 1280px;
+.app {
+  display: flex;
+  background-color: #0f172b;
+  font-family: "Manrope", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
+  color: #ffffff;
+  min-height: 100vh;
+  transition: all 0.3s ease;
+}
+
+.app__content {
+  flex: 1;
+  max-width: calc(1440px - 222px);
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 32px 40px;
+  transition: all 0.3s ease;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+/* Adjust max width dynamically when collapsed */
+.app--collapsed .app__content {
+  max-width: calc(1440px - 46px);
 }
