feat(responsive): add mobile-friendly layout
- Made all pages responsive
- Added MobileHomeHeader for a unique home page header on small screens
- Created BottomNav to replace sidebar on smaller screens

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,3 +23,9 @@
 .app--collapsed .app__content {
   max-width: calc(1440px - 46px);
 }
+
+@media screen and (max-width: 810px) {
+  .app__content {
+    max-width: 100%;
+  }
+}
