--- a/src/components/ScoreCard/ScoreCard.css
+++ b/src/components/ScoreCard/ScoreCard.css
@@ -19,3 +19,11 @@
   line-height: 24px;
   color: #90a1b9;
 }
+
+@media screen and (max-width: 810px) {
+  .scorecard {
+    background: none;
+    border: none;
+    order: 1;
+  }
+}
