Add bottom padding to app content on small screens to avoid BottomNav overlap

--- a/src/pages/Journal/Journal.css
+++ b/src/pages/Journal/Journal.css
@@ -245,7 +245,7 @@
   .journal__grid {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    margin-bottom: 24px;
   }
 
   /* Make moods horizontally scrollable */
