--- a/src/components/MobileHomeHeader/MobileHomeHeader.css
+++ b/src/components/MobileHomeHeader/MobileHomeHeader.css
@@ -2,7 +2,7 @@
   display: none;
   align-items: center;
   justify-content: space-between;
-  padding: 0;
+  padding: 16px 0 0;
 }
 
 .mobile-home-header__title {
