--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,6 +26,7 @@
 
 @media screen and (max-width: 810px) {
   .app__content {
+    box-sizing: border-box;
     max-width: 100%;
     padding: 24px 24px 90px;
   }
